--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="hero-social">
                     <a href="https://www.linkedin.com/in/kelvinnw/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://https://github.com/Kelvinnw25" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Kelvinnw25" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
