fix error profile picture

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="section" id="about">
             <h2 class="section-title">Tentang Saya</h2>
             <div class="about-container container grid">
-                <img src="/media/kelvinPict.png" alt="Profile Picture" class="about-img hidden-anim">
+                <img src="KelvinPict.png" alt="Profile Picture" class="about-img hidden-anim">
                 <div class="about-data hidden-anim">
                     <p>
                         I am an adaptive and motivated problem solver with experience in 
