refine the folder structure

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         and am actively seeking internship opportunities.
                     </p>
                     <div class="hero-buttons">
-                        <a href="link_cv.pdf" class="button" target="_blank">Download CV</a>
+                        <a href="assets/Kelvin_CV.pdf" class="button" download="Kelvin_CV.pdf">Download CV</a>
                         <a href="#contact" class="button button-ghost">Kontak Saya</a>
                     </div>
                 </div>
@@ -52,9 +52,9 @@
         </section>
 
         <section class="section" id="about">
-            <h2 class="section-title">Tentang Saya</h2>
+            <h2 class="section-title">About Me</h2>
             <div class="about-container container grid">
-                <img src="KelvinPict.png" alt="Profile Picture" class="about-img hidden-anim">
+                <img src="img/kelvinPict.png" alt="Profile Picture" class="about-img hidden-anim">
                 <div class="about-data hidden-anim">
                     <p>
                         I am an adaptive and motivated problem solver with experience in 
