--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="assets/Kelvin_CV.pdf" class="button" download="Kelvin_CV.pdf">Download CV</a>
-                        <a href="#contact" class="button button-ghost">Kontak Saya</a>
+                        <a href="#contact" class="button button-ghost">Contact Me</a>
                     </div>
                 </div>
                 <div class="hero-social">
@@ -109,60 +109,66 @@
 
         <section class="section" id="projects">
             <h2 class="section-title">Projects</h2>
-            <p class="section-subtitle">Ini adalah beberapa proyek yang telah saya kerjakan. (Klik ikon <i class="fab fa-github"></i> untuk lihat di GitHub)</p>
+            <p class="section-subtitle">Here are some projects I have worked on. (Click the <i class="fab fa-github"></i> icon to view them on GitHub)</p>
             <div class="projects-container container grid">
                 
                 <div class="project-card hidden-anim">
                     <div class="project-card-content">
-                        <h3 class="project-title">Nama Proyek 1</h3>
+                        <h3 class="project-title">B-Clean</h3>
                         <p class="project-description">
-                            Deskripsi singkat proyek lo di sini. Jelasin proyek ini ngapain, 
-                            masalah apa yang diselesaikan.
+                            B-Clean is an innovative application engineered to address Indonesia's complex waste management challenges. 
+                            The project's mission is to foster a sustainable recycling ecosystem by seamlessly connecting residents, businesses, 
+                            and waste management facilities on one efficient platform.
                         </p>
                         <div class="project-tech">
-                            <span>Java</span>
-                            <span>Spring Boot</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>PHP</span>
+                            <span>JavaScript</span>
+                            <span>MySQL</span>
+                            <span>React.JS</span>
+                            <span>Laravel</span>
+                        </div>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/Kelvinnw25/B-Clean" target="_blank"><i class="fab fa-github"></i></a>
+                        </div>
+                </div>
+
+                <div class="project-card hidden-anim">
+                    <div class="project-card-content">
+                        <h3 class="project-title">Core Banking System (Backend)</h3>
+                        <p class="project-description">
+                            A backend-only API for a core banking system, built entirely in Python with a MySQL database. This project focuses on fundamental backend logic, 
+                            including secure user authentication with input validation, and core account features like tracking transaction histories. 
+                            The system is built on a clean, structured SQL schema with separated logic for database, authentication, and account management.
+                        </p>
+                        <div class="project-tech">
+                            <span>Python</span>
                             <span>MySQL</span>
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://https://github.com/Kelvinnw25username/repo1" target="_blank"><i class="fab fa-github"></i></a>
-                        </div>
+                        <a href="https://github.com/Kelvinnw25/BankBackEndSystem" target="_blank"><i class="fab fa-github"></i></a>
+                    </div>
                 </div>
 
                 <div class="project-card hidden-anim">
                     <div class="project-card-content">
-                        <h3 class="project-title">Nama Proyek 2</h3>
+                        <h3 class="project-title">Jenius Academy</h3>
                         <p class="project-description">
-                            Contoh proyek lain, mungkin pake React? 
-                            Misal, "Web dashboard untuk visualisasi data penjualan..."
+                            Jenius Academy is a front-end prototype of an e-learning platform. It showcases a modern UI/UX design and foundational front-end skills. 
+                            The app features key pages like the Homepage, Subscription tiers, and course browsing. It’s built to demonstrate a clean, and professional, 
+                            ready to be expanded into a full-stack application.
                         </p>
                         <div class="project-tech">
-                            <span>React.js</span>
-                            <span>Node.js</span>
+                            <span>HTML</span>
                             <span>CSS</span>
+                            <span>JavaScript</span>
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://https://github.com/Kelvinnw25username/repo2" target="_blank"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-
-                <div class="project-card hidden-anim">
-                    <div class="project-card-content">
-                        <h3 class="project-title">Nama Proyek 3</h3>
-                        <p class="project-description">
-                            Satu lagi proyek. Mungkin analisis data pake Python? 
-                            "Analisis sentimen sosial media menggunakan Python..."
-                        </p>
-                        <div class="project-tech">
-                            <span>Python</span>
-                            <span>Pandas</span>
-                            <span>Scikit-learn</span>
-                        </div>
-                    </div>
-                    <div class="project-links">
-                        <a href="https://https://github.com/Kelvinnw25username/repo3" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Kelvinnw25/JeniusAcademy" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
 
@@ -170,7 +176,7 @@
         </section>
 
         <section class="section" id="experience">
-            <h2 class="section-title">Pengalaman</h2>
+            <h2 class="section-title">Experience</h2>
             <div class="experience-container container">
                 
                 <div class="timeline">
@@ -180,30 +186,27 @@
                             <h3 class="timeline-title">Private Tutor</h3>
                             <p class="timeline-company">Carehouse (Freelance)</p>
                             <p class="timeline-description">
-                                Merancang materi belajar dan soal latihan untuk siswa TK hingga SMA, 
-                                meningkatkan pemahaman dan keterampilan komunikasi.
+                                Taught and designed learning materials and practice questions for students from kindergarten to high school, enhancing their understanding and communication skills.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item hidden-anim">
                         <div class="timeline-content">
-                            <span class="timeline-date">Jun 2023 - Okt 2023</span>
+                            <span class="timeline-date">Jun 2023 - Oct 2023</span>
                             <h3 class="timeline-title">Business Development Representative</h3>
                             <p class="timeline-company">VISION (Part-time)</p>
                             <p class="timeline-description">
-                                Mendapat pengalaman sales, prospecting, dan mengembangkan 
-                                keterampilan interpersonal dalam lingkungan yang dinamis.
+                                Gained experience in sales, prospecting, and developed interpersonal skills in a dynamic environment.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item hidden-anim">
                         <div class="timeline-content">
-                            <span class="timeline-date">Mei 2023 - Sep 2023</span>
-                            <h3 class="timeline-title">Analis Data</h3>
-                            <p class="timeline-company">Lion Air Group (Magang)</p>
+                            <span class="timeline-date">May 2023 - Sep 2023</span>
+                            <h3 class="timeline-title">Data Analyst</h3>
+                            <p class="timeline-company">Lion Air Group (Internship)</p>
                             <p class="timeline-description">
-                                Menganalisis data lounge & hotel kru, melakukan data cleaning, 
-                                dan memperbaiki data menggunakan Excel.
+                                Analyzed crew lounge & hotel data, performed data cleaning, and improved data quality using Excel.
                             </p>
                         </div>
                     </div>
@@ -227,7 +230,7 @@
 
     <footer class="footer" id="contact">
         <div class="footer-container container">
-            <h2 class="footer-title">Kontak Saya</h2>
+            <h2 class="footer-title">Contact Me</h2>
             <p class="footer-description">
                 I am open to internship opportunities and collaboration.
                 Feel free to contact me.
@@ -244,7 +247,7 @@
                 </a>
             </div>
             <span class="footer-copy">
-                &copy; 2025, Kelvin Nathanael Witarsa. Dibuat dengan <i class="fas fa-heart"></i>.
+                &copy; 2025, Kelvin Nathanael Witarsa. Created with <i class="fas fa-heart"></i>.
             </span>
         </div>
     </footer>
