revise the description of mine

--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
                     <h1>Kelvin Nathanael Witarsa</h1>
                     <h2 class="hero-subtitle">A Software Engineering student</h2>
                     <p class="hero-description">
-                        A 5th-semester Computer Science student at Binus University, 
-                        focusing on Software Engineering. I'm passionate about the 
-                        intersection of <strong>Web Programming</strong> and <strong>Artificial Intelligence</strong>, 
-                        and am actively seeking internship opportunities.
+                            A 5th-semester Software Engineering student with a <strong>strong focus on Fullstack Development</strong>. 
+                            My hands-on experience includes building <strong>fullstack applications with React.js and Laravel</strong>, 
+                            developing <strong>backend systems in Python with MySQL</strong>, 
+                            and crafting <strong>interactive frontends using HTML, CSS, and vanilla JavaScript</strong>. 
+                            I am passionate about leveraging this versatile skillset at the intersection of 
+                            <strong>Web Programming and Artificial Intelligence</strong>, 
+                            and am <strong>actively seeking internship opportunities</strong>.
                     </p>
                     <div class="hero-buttons">
                         <a href="assets/Kelvin_CV.pdf" class="button" download="Kelvin_CV.pdf">Download CV</a>
