adding skills and projects

--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
                         <span class="skill-item">CSS</span>
                         <span class="skill-item">JavaScript</span>
                         <span class="skill-item">MySQL</span>
+                        <span class="skill-item">SQLite</span>
+                        <span class="skill-item">Android SDK</span>
                         <span class="skill-item">PhpMyAdmin</span>
                         <span class="skill-item">MS Excel</span>
                         <span class="skill-item">Data Administration</span>
                         <span class="skill-item">Data Management</span>
+                        <span class="skill-item">Data Analyst</span>
                     </div>
                 </div>
                 <div class="skills-content hidden-anim">
@@ -168,6 +171,47 @@
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
+                        </div>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/Kelvinnw25/JeniusAcademy" target="_blank"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+
+                <div class="project-card hidden-anim">
+                    <div class="project-card-content">
+                        <h3 class="project-title">Joymarket</h3>
+                        <p class="project-description">
+                            Joymarket is a comprehensive digital marketplace application designed for fresh food and grocery delivery, 
+                            built as a core project for the Object-Oriented Analysis & Design course. 
+                            The project focuses on implementing a modern system to manage complex e-grocery operations through a robust MVC architecture.
+                        </p>
+                        <div class="project-tech">
+                            <span>Java</span>
+                            <span>JavaFX</span>
+                            <span>MySQL</span>
+                            <span>MVC Architecture</span>
+                        </div>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/Kelvinnw25/JoyMarket_OOAD" target="_blank"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+
+                <div class="project-card hidden-anim">
+                    <div class="project-card-content">
+                        <h3 class="project-title">Smart To-Do List</h3>
+                        <p class="project-description">
+                            SmartTask is an intelligent productivity application engineered to solve the problem of information fragmentation in academic and professional environments. 
+                            The project's mission is to streamline workflow by leveraging Generative AI (Google Gemini) to instantly transform unstructured chat messages into structured, actionable tasks. 
+                            It features a proprietary dynamic scoring algorithm that autonomously prioritizes workload based on real-time urgency and deadline proximity.
+                        </p>
+                        <div class="project-tech">
+                            <span>Android Studio</span>
+                            <span>Java</span>
+                            <span>SQLite</span>
+                            <span>Gemini AI</span>
+                            <span>Retrofit</span>
                         </div>
                     </div>
                     <div class="project-links">
