--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="project-card-content">
                         <h3 class="project-title">Smart To-Do List</h3>
                         <p class="project-description">
-                            SmartTask is an intelligent productivity application engineered to solve the problem of information fragmentation in academic and professional environments. 
+                            Smart To-Do List is an intelligent productivity application engineered to solve the problem of information fragmentation in academic and professional environments. 
                             The project's mission is to streamline workflow by leveraging Generative AI (Google Gemini) to instantly transform unstructured chat messages into structured, actionable tasks. 
                             It features a proprietary dynamic scoring algorithm that autonomously prioritizes workload based on real-time urgency and deadline proximity.
                         </p>
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/Kelvinnw25/JeniusAcademy" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Kelvinnw25/SmartTo-DoList" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
 
