--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             and am <strong>actively seeking internship opportunities</strong>.
                     </p>
                     <div class="hero-buttons">
-                        <a href="assets/Kelvin_CV.pdf" class="button" download="Kelvin_CV.pdf">Download CV</a>
+                        <a href="assets/Kelvin Nathanael Witarsa_Resume.pdf" class="button" download="Kelvin_CV.pdf">Download CV</a>
                         <a href="#contact" class="button button-ghost">Contact Me</a>
                     </div>
                 </div>
